Subindo uma animação/ gambiarra? de background

--- a/form-login/index.html
+++ b/form-login/index.html
@@ -27,9 +27,22 @@
                 <!-- a se implementar ainda -->
             </form>
         </div>
-
-
     </main>
+
+    <div class="area">
+        <ul class="circles">
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+            <li></li><li></li>
+        </ul>
+    </div>
+
     <footer>
         <p>Developed by <a href="https://github.com/Brenok25"> Breno Kauan</a></p>
     </footer>
