Agr o esqueci a senha mando pro read me que tem o email e senha padrões

--- a/form-login/index.html
+++ b/form-login/index.html
@@ -23,8 +23,7 @@
                 <span class="line_inp"></span>
 
                 <button class="submit_form">Login</button>
-                <a href="#" class="more">Esqueci a senha </a>
-                <!-- a se implementar ainda -->
+                <a href="https://github.com/Brenok25/Formulario-de-login" class="more">Esqueci a senha </a>
             </form>
         </div>
     </main>
